syntax = "proto3";

option csharp_namespace = "ShireBankGrcpService";

package greet;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc OpenAccount (OpenAccountRequest) returns (google.protobuf.UInt32Value);
  rpc Withdraw (WithdrawRequest) returns (google.protobuf.FloatValue);
  rpc Deposit (DepositRequest) returns (google.protobuf.Empty);
  rpc GetHistory (google.protobuf.UInt32Value) returns (google.protobuf.StringValue);
  rpc CloseAccount (google.protobuf.UInt32Value) returns (google.protobuf.BoolValue);
}
 
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message OpenAccountRequest {
  string firstName = 1;
  string lastName =  2;
  float  debtLimit = 3;
}


// The request message containing the user's name.
message DepositRequest {
  uint32 account = 1;
  float ammount = 2;
}

message WithdrawRequest {
  uint32 account = 1;
  float ammount = 2;
}
